feat: about section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>CV</h1>
-    <img src="xELj6O-HAR4.jpg" width="300">
+    <section class="about">
+      <div class="col-2">
+        <img src="xELj6O-HAR4.jpg" width="300">
+      </div>
+      <div class="col-2">
+        <h2>About Me</h2>
+        <img src="xELj6O-HAR4.jpg" width="300">
+      </div>
+    </section>
   </body>
 </html>
