--- a/index.html
+++ b/index.html
@@ -1,18 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
+    <title>CV</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <section class="about">
-      <div class="col-2">
-        <img src="xELj6O-HAR4.jpg" width="300">
-      </div>
-      <div class="col-2">
-        <h2>About Me</h2>
-        <img src="xELj6O-HAR4.jpg" width="300">
-      </div>
-    </section>
-  </body>
+</head>
+
+<body>
+    <div class="block">
+        <div class="col-2" style="text-align: right;">
+            <img src="xELj6O-HAR4.jpg" width="300">
+        </div>
+        <div class="col-2">
+            <h3>Abdurakhmonov Arslonbek</h3>
+            <p class="prime-text">
+                I was born 04/27/1995 in the city of Tashkent. At the moment I live in Tashkent at the address Yashnabad district, Musaffo street, 56. In 9th grade, I won first place in the district at the Physics Olympiad. I graduated from the 2 academic lyceum at TUIT
+                with honors. During training, I repeatedly took first places at the Olympiads in physics and mathematics at the Lyceum. In the third year I was awarded a scholarship: "O'zbekiston aloqa xodimlari kasaba uyushmasi Markaziy kengashining
+                stipendiasi sohibi." After graduating from the Lyceum, I entered Moscow State University, graduated from the University in applied mathematics and computer science.
+            </p>
+        </div>
+    </div>
+    <div class="block">
+        <div class="col-2">
+            <h3>Skills</h3>
+            <ul>
+                <li>- Basic knowledge of WordPress(little experience modifying themes and plugins, great experience deploying the site and setting up e-commerce plugins)</li>
+                <li>- C / C ++ (use in study)</li>
+                <li>- Python</li>
+                <li>- php</li>
+                <li>- javascript</li>
+                <li>- html + css</li>
+                <li>- SQL</li>
+                <li>- vue.js</li>
+                <li>- Bootstrap</li>
+                <li>- JQuery</li>
+            </ul>
+        </div>
+        <div class="col-2">
+            <h3> My works:</h3>
+            <ul>
+
+                <li>https://urbanstore.uz</li>
+                <li>https://atlantis-study.uz/</li>
+                <li>https://safaron.uz/</li>
+                <li>https://commentout.uz</li>
+                <li>https://bigmall.uz</li>
+                <li>https://kntc.or.kr</li>
+                <li>http://vizitki.uz/</li>
+                <li>http://flaer.uz/</li>
+                <li>https://my-topic.uz/</li>
+                <li>https://pochemuchka.uz/</li>
+                <li>http://vizitki.uz/conster/vizitka/index.html</li>
+
+            </ul>
+        </div>
+    </div>
+    <div class="block">
+
+        <div class="col-2">
+            <h3> Contact Info</h3>
+            <ul>
+                <li>email: arslan.06_91@mail.ru</li>
+                <li>phone: +998 90 9860506</li>
+                <li>site: https://vk.com/arslandotcom</li>
+            </ul>
+        </div>
+    </div>
+</body>
+
 </html>
